making progress on that evil red stuff

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -19,9 +19,9 @@
 		      <form class="form-signin" action="/login" method="post">
 		        <h4 class="form-signin-heading">Please sign in</h4>
 		        <label for="inputEmail" class="sr-only">Email address</label>
-		        <input type="text" id="inputEmail" class="form-control" placeholder="Account Name" name="user_name" required autofocus>
+		        <input type="text" id="inputEmail" class="form-control" placeholder="Account Name" name="username" required autofocus>
 		        <label for="inputPassword" class="sr-only">Password</label>
-		        <input type="password" id="inputPassword" class="form-control" name="user_pass" placeholder="Password" required>
+		        <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
 		        <button class="btn btn-md btn-primary btn-block" type="submit">Sign in</button>
 		      </form>
 	      <br>
