--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -10,9 +10,8 @@
 </nav>
 
 <div class="container">
-	<div class="vertical-tweak">
-			<div class="row">
-				<div class="col-md-10 col-md-offset-7">
+	<div class="vertical-tweak row">
+				<div class="col-md-8 col-md-offset-2">
 					<br>
 					<form action="/signup" method="post">
 						<h3><strong>Join Fwitter Today.</strong></h3>
@@ -27,6 +26,5 @@
 					</form>
 					<br>
 				</div>
-			</div>
 	</div>
 </div>
