--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,6 +12,12 @@
   </head>
 
   <body>
+  <% if flash[:success] %>
+    <div id="successMessage" class="alert alert-success"><%= flash[:success] %></div>
+  <% end %>
+  <% if flash[:error] %>
+    <div id="flash" class="error"><%= flash[:error] %></div>
+  <% end %>
       <%= yield %>
   </body>
 </html>
