--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -10,20 +10,18 @@
 </nav>
 
 <div class="container">
-	<div class="vertical-tweak">
-			<div class="row">
-				<div class="col-md-10 col-md-offset-7">
+	<div class="vertical-tweak row">
+				<div class="col-sm-8 col-sm-offset-2">
 					<br>
 					<form action="/login" method="post">
 						<h3><strong>Please Sign in.</strong></h3>
-						<input placeholder="Account Name" class="form-control" id="username" type="text" name="user_name">
+						<input placeholder="Account Name" class="form-control" id="username" type="text" name="username">
 						<br>
-						<input placeholder="Password" class="form-control" id="password" type="password" name="user_pass">
+						<input placeholder="Password" class="form-control" id="password" type="password" name="password">
 						<br>
-						<button class="btn btn-md btn-primary btn-block roundify" id="submit"  type="submit"> Create Account</button>
+						<button class="btn btn-md btn-primary btn-block roundify" id="submit"  type="submit"> Sign In</button>
 					</form>
 					<br>
 				</div>
-			</div>
 	</div>
 </div>
