--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,75 @@
-show.erb
+<head>    
+	<script src="http://code.jquery.com/jquery-1.5.js"></script>
+    <script>
+    	 setTimeout(function() {
+        $('#successMessage').fadeOut('fast');
+       }, 3000);
+      function countChar(val) {
+        var len = val.value.length;
+        if (len >= 150) {
+          val.value = val.value.substring(0, 150);
+        } else {
+          $('#charNum').text(150 - len);
+        }
+      };
+    </script>
+</head>
+<body class="background-color">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand navbar-center" href="/">fwitter</a>
+    </div>
+    <div  class="padding-right">
+    <ul class="nav navbar-nav navbar-right">
+    	<li class="left-divider"><a href="/logout"><span class="glyphicon glyphicon-log-out gi-2x"></span></a></li>
+
+    	<li><form><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit"><strong>fweet</strong></button></form></li>
+    </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+	<div class="row"> 
+
+	  <div class="col-md-3">
+	     <div class="col-md-12 content-box">
+	        <h4>@<%=@user.username%></h4>
+	        <p>Fweets: <%= @user.tweets.size%></p>
+	     </div>
+	  </div>
+
+	  	<div class="col-md-6">
+	     	<%tweets =  @user.tweets.all.sort_by{|tweet|tweet.created_at}.reverse%>
+	        <% tweets.each do |tweet|%>
+	        	<div class="col-md-12 content-box"> 
+	        		<h6><%="@#{tweet.user.username} - #{tweet.created_at.localtime}"%></h6>
+	        		<br>
+	        		<p><%=tweet.content%></p>
+	        	</div>
+	        	<div class="col-xs-12 xs-spacer"></div>
+	        <% end %>
+	        <br>
+	  </div>
+
+	  <div class="col-md-3">
+	     <div class="col-md-12 content-box">
+	        <h4><strong>Who to Follow</strong></h4>
+	        <%User.all.each do |user|%>
+	        	<%next if user.id == @user.id%>
+	        	<div class="row bottom-border">
+		        	<div class="col-sm-2"><a href="#" class="profile-btn btn btn-default btn-circle"><span class="glyphicon glyphicon-user gi-2x"></span></a></div>
+		        	<div class="col-sm-8 pull-right">
+		        		<h6><%="@#{user.username}"%></h6>
+		        		<button class="btn btn-sm btn-primary roundify pull-left" type="submit"><strong>follow</strong></button>
+		        		<div class=" col-md-12 small-spacer"></div>
+		        	</div>
+	        	</div>
+	        <%end%>
+	     </div>
+	  </div>
+	</div>
+	<!-- end of row -->
+</div>
+</body>
