--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -6,7 +6,6 @@
   align-items: center;
 }
 
-
 .mountain-background {
     background-image: url("../images/mountainclouds.jpg");
     background-repeat: no-repeat;
@@ -80,6 +79,10 @@
   font-size: 1.2em;
 }
 
+.gi-5x {
+  font-size: 5em;
+}
+
 .padding-right {
   padding-right: 14em;
 }
@@ -108,4 +111,27 @@
   font-size: 12px;
   line-height: 1.42;
   border-radius: 15px;
+}
+
+
+
+/*---------------FLASH MESSAGE STYLING-----------------*/
+
+.alert {
+  text-align: center;
+   font-weight: bold;
+   -moz-border-radius: 4px 4px 4px 4px;
+   -webkit-border-radius: 4px 4px 4px 4px;
+   border-radius: 4px 4px 4px 4px;
+   margin-bottom: 18px;
+   padding: 12px 25px 12px 24px;
+   -moz-box-shadow: 3px 3px 1px 1px #CCCCCC;
+   -webkit-box-shadow: 3px 3px 1px 1px #CCCCCC;
+   box-shadow: 3px 3px 1px 1px #CCCCCC;
+}
+.alert-success {
+   background-color: #66E167;
+   border-color: #D6E9C6;
+   color: black;
+   padding-top: 20px;
 }
