--- a/app/views/tweets/tweet-layout.erb
+++ b/app/views/tweets/tweet-layout.erb
@@ -7,7 +7,7 @@
     <ul class="nav navbar-nav navbar-right">
     	<li class="left-divider"><a href=""><span class="glyphicon glyphicon-user gi-2x"></span></a></li>
 
-    	<li><form><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit">fweet</button></form></li>
+    	<li><form method="get" action="/tweets/new" ><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit">fweet</button></form></li>
     </ul>
     </div>
   </div>
