--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,9 +1,6 @@
 <head>    
 	<script src="http://code.jquery.com/jquery-1.5.js"></script>
     <script>
-    	 setTimeout(function() {
-        $('#successMessage').fadeOut('fast');
-       }, 3000);
       function countChar(val) {
         var len = val.value.length;
         if (len >= 150) {
@@ -24,7 +21,7 @@
     <ul class="nav navbar-nav navbar-right">
     	<li class="left-divider"><a href="/logout"><span class="glyphicon glyphicon-log-out gi-2x"></span></a></li>
 
-    	<li><form><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit"><strong>fweet</strong></button></form></li>
+    	<li><form method="get" action="/tweets/new" ><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit"><strong>fweet</strong></button></form></li>
     </ul>
     </div>
   </div>
@@ -35,8 +32,20 @@
 
 	  <div class="col-md-3">
 	     <div class="col-md-12 content-box">
-	        <h4>@<%=@user.username%></h4>
-	        <p>Fweets: <%= @user.tweets.size%></p>
+	     	<div class="row">
+	     	<div class="col-md-4">
+		     	<a href="#" class="profile-pic">
+	  				<div class="profile-pic" style="background-image: url('https://i.imgur.com/rjwIair.jpg')" >
+	      		<span class="glyphicon glyphicon-camera">       </span>
+	      		<span>Change Image</span>
+	  				</div>
+					</a>
+				</div>
+					<div class="col-md-8">
+	        	<h4>@<%=@user.username%></h4>
+	        	<p>Fweets: <%= @user.tweets.size%></p>
+	      	</div>
+	     </div>
 	     </div>
 	  </div>
 
@@ -60,7 +69,7 @@
 	        	<div class="col-md-12 content-box"> 
 	        		<h6><%="@#{tweet.user.username} - #{tweet.created_at.localtime}"%></h6>
 	        		<br>
-	        		<p><%=tweet.content%></p>
+	        		<a href="/tweets/<%=tweet.id%>" class="no-style"><p><%=tweet.content%></p></a>
 	        	</div>
 	        	<div class="col-xs-12 xs-spacer"></div>
 	        <% end %>
@@ -73,8 +82,8 @@
 	        <%User.all.each do |user|%>
 	        	<%next if user.id == @user.id%>
 	        	<div class="row bottom-border">
-		        	<div class="col-sm-2"><a href="#" class="profile-btn btn btn-default btn-circle"><span class="glyphicon glyphicon-user gi-2x"></span></a></div>
-		        	<div class="col-sm-8 pull-right">
+		        	<div class="col-sm-4"><div class="profile-badge" style="background-image: url('https://i.imgur.com/rjwIair.jpg')" ></div></div>
+		        	<div class="col-sm-8">
 		        		<h6><%="@#{user.username}"%></h6>
 		        		<button class="btn btn-sm btn-primary roundify pull-left" type="submit"><strong>follow</strong></button>
 		        		<div class=" col-md-12 small-spacer"></div>
