--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -24,7 +24,7 @@
     <ul class="nav navbar-nav navbar-right">
     	<li class="left-divider"><a href="/logout"><span class="glyphicon glyphicon-log-out gi-2x"></span></a></li>
 
-    	<li><form><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit"><strong>fweet</strong></button></form></li>
+    	<li><form method="get" action="/tweets/new" ><button class="btn btn-md btn-info btn-block roundify navbtn" type="submit"><strong>fweet</strong></button></form></li>
     </ul>
     </div>
   </div>
