--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -32,6 +32,8 @@
 }
 
 .content-box {
+  padding-top:7px;
+  padding-bottom:7px;
   background-color: white;
   border-style: solid;
   border-color: transparent;
@@ -67,6 +69,7 @@
 .bottom-border {
   border-color: #eaeaea;
   border-bottom: 1px;
+
 
 }
 
@@ -114,6 +117,56 @@
 }
 
 
+/*---------------Profile Pic STYLING-----------------*/
+
+.profile-pic {
+    border-radius: 50%;
+    height: 75px;
+    width: 75px;
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    vertical-align: middle;
+    text-align: center;
+    color: transparent;
+    transition: all .3s ease;
+    text-decoration: none;
+}
+
+.profile-badge {
+
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: multiply;
+    vertical-align: middle;
+    text-align: center;
+    color: transparent;
+    transition: all .3s ease;
+    text-decoration: none;
+}
+
+.bottom-border .profile-badge {
+  margin-top: 10px;
+}
+
+.profile-pic:hover {
+    background-color: rgba(0,0,0,.5);
+    z-index: 10000;
+    color: #fff;
+    transition: all .3s ease;
+    text-decoration: none;
+}
+
+.profile-pic span {
+    display: inline-block;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    font-size: 8px;
+}
+
 
 /*---------------FLASH MESSAGE STYLING-----------------*/
 
@@ -131,6 +184,13 @@
 }
 .alert-success {
    background-color: #66E167;
+   border-color: #D6E9C6;
+   color: black;
+   padding-top: 20px;
+}
+
+.alert-error {
+   background-color: #ff4d4d;
    border-color: #D6E9C6;
    color: black;
    padding-top: 20px;
