--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,7 @@
 Tweets.erb<br>
 
-Welcome, <%= @user.username %>
+Welcome, <%= current_user.username %>
 
 <% @tweets.each do |tweet| %>
-  <%= tweet %><br>
+  <%= tweet.content %><br>
 <% end %>
