--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,4 @@
+<h1> Welcome to Fwitter </h1>
 <h3>Sign Up</h3>
 <form action="/signup" method="POST">
   <input type="text" name="username" placeholder="Username:">
