--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,3 +1,4 @@
+<h1> Welcome to Fwitter </h1>
 <h3>Login</h3>
 <form action="/login" method="POST">
   <input type="text" name="username" placeholder="Username:">
