--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,3 +5,4 @@
   <input type="text" name="password">
   <p><input type="submit" id="submit" value="Login">
 </form>
+<p>Don't have an account? <a href="/signup">Sign up.</a>
