--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,7 @@
 Show Tweet
   <p><%= @tweet.content %>
 <p>
-  <form method="post" action="/tweets/<%= @tweet.id %>/delete"><input type="submit" value="Delete Tweet"></form>
+  <form method="post" action="/tweets/<%= @tweet.id %>/delete">
+    <input type="submit" value="Delete Tweet"></form>
   <!-- <form method="post" action="/tweets/<%= @tweet.id %>/edit"><input type="submit" value="Edit Tweet"></form> -->
-<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a> | <a href="/tweets">All Tweets</a>
