--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,4 +1,4 @@
-Sign Up
+<h2>Sign Up</h2>
 <form method="post" action="/signup">
   <p>Username:<br>
   <input type="text" id="username" name="username">
