--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-Hi hi hi show.erb
+<h2>Account Page</h2>
 <p>Welcome, <%= @user.username %>
 <p><% @user.tweets.each do |tweet| %>
   <%= tweet.content %>
