--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -8,3 +8,4 @@
   <input type="text" name="password">
   <p><input type="submit" id="submit" value="Sign Up">
 </form>
+<p>Already have an account? <a href="/login">Log in.</a>
