--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,4 +1,4 @@
-Create Tweet
+Compose a Tweet
 <form method="post" action="/tweets">
   <p>Tweet: <input type="text" name="content">
   <p><input type="submit" id="submit" value="Submit">
