--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,7 @@
 <h2>Sign Up</h2>
 <form method="post" action="/signup">
-  <p>Username:<br>
-  <input type="text" id="username" name="username">
+  Username:<br>
+  <input type="text" name="username">
   <p>Email:<br>
   <input type="text" name="email">
   <p>Password:<br>
