--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,4 +1,4 @@
-Edit Tweet
+<h2>Edit Tweet</h2>
 <form method="post" action="/tweets/<%= @tweet.id %>">
   <input type="hidden" name="_method" value="PATCH">
   <p>Tweet: <input type="text" name="content" value="<%= @tweet.content %>">
