--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,7 @@
+<h2>Login</h2>
 <form method="post" action="/login">
   Username:<br>
-  <input type="text" id="username" name="username">
+  <input type="text" name="username">
   <p>Password:<br>
   <input type="text" name="password">
   <p><input type="submit" id="submit" value="Login">
