--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,6 +2,7 @@
   <p><%= @tweet.content %>
 <p>
   <form method="post" action="/tweets/<%= @tweet.id %>/delete">
+    <!-- <input id="hidden" type="hidden" name="_method" value="delete"> -->
     <input type="submit" value="Delete Tweet"></form>
-  <!-- <form method="post" action="/tweets/<%= @tweet.id %>/edit"><input type="submit" value="Edit Tweet"></form> -->
+
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a> | <a href="/tweets">All Tweets</a>
