--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,2 +1,12 @@
 <h1>Create A New User</h1>
 
+<form action="/users" method="POST">
+<br/>
+<label>User Name:</label> <br/>
+<input type="text" name="name" id="user_name"> <br/>
+<label>Password:</label> <br/>
+<input type="text" name="password" id="password"> <br/>
+
+<input type="submit" value="Sign Up">
+</form>
+
