--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,11 +1,13 @@
 <h1>Create A New User</h1>
 
-<form action="/users" method="POST">
+<form action="/signup" method="POST">
 <br/>
 <label>User Name:</label> <br/>
-<input type="text" name="name" id="user_name"> <br/>
+<input type="text" name="username" id="user_name"> <br/>
+<label>Email:</label> <br/>
+<input type="text" name="email" id="email"> <br/>
 <label>Password:</label> <br/>
-<input type="text" name="password" id="password"> <br/>
+<input type="password" name="password" id="password"> <br/>
 
 <input type="submit" value="Sign Up">
 </form>
