--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -2,7 +2,7 @@
 
 <h3>Sign up</h3>
 
-<form action="/users" method="POST">
+<form action="/signup" method="POST">
   Username: <input type="text" name="username" id="username"><br>
   Email: <input type="text" name="email" id="email"><br>
   Password: <input type="text" name="password" id="password"><br>
