--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -6,5 +6,5 @@
   Username: <input type="text" name="username" id="username"><br>
 
   Password: <input type="text" name="password" id="password"><br>
-  <input type="submit" name="submit">
+  <input type="submit" name="submit" value="submit">
 </form>
