--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,1 +1,6 @@
 <h2>Create your new tweet here!</h2>
+
+<form action="/tweets" method="POST">
+Content: <input type="text" name="content" id="content"><br>
+<input type="submit" name="submit" value="submit">
+</form>
