view a single tweet

--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,1 +1,7 @@
-<p>Here's that one tweet</p>
+<h2>Here's that one tweet</h2>
+
+<p><%= @tweet.content%></p>
+
+<a href="/tweets/delete">Delete Tweet</a>
+<br>
+<a href="/tweets/edit">Edit Tweet</a>
