--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,6 +2,10 @@
 
 <p><%= @tweet.content%></p>
 
-<a href="/tweets/delete">Delete Tweet</a>
-<br>
-<a href="/tweets/edit">Edit Tweet</a>
+<form action="/tweets/<%= @tweet.id%>/delete" method="POST">
+<input type="submit" name="delete_tweet" id="Delete Tweet">
+</form>
+
+<form action="/tweets/<%= @tweet.id%>/edit" method="POST">
+<input type="submit" name="edit_tweet" id="Edit Tweet">
+</form>
