--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,14 +1,7 @@
-<h1>Create an account with Ftwitter</h1>
-
-<form action="/signup" method="POST">
-  <label for="username">Username:</label>
-  <input type="text" id="username" name="username"/>
-  <br />
-  <label for="email">Email:</label>
-  <input type="text" id="email" name="email"/>
-  <br />
-  <label for="password">Password:</label>
-  <input type="text" id="password" name="password"/>
-  <br />
-  <input type="submit" value="Create New Account" />
+<h2>Make a new tweet</h2>
+<form action='/tweets' method='POST'>
+<label>Content:</label><br />
+<textarea name="content" cols="40" rows="5"></textarea>
+<br />
+<input type='submit' id='submit' value='Submit'/>
 </form>
