--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,7 +1,11 @@
-<h1> Create a New Tweet </h1>
-<form method="post" action="/tweets">
-  <label> Tweet: </label>
-  <input type="text" name="content">
-  <input type="submit" value="submit">
+<h2> Create a New Tweet </h2>
+
+<form action="/tweets" method="POST">
+
+   <label> Tweet </label>
+   <input id="content" type="text" name="content"><br>
+
+  <br></br>
+
+  <input class="button" type="submit" value="submit">
 </form>
-  
