--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -2,5 +2,5 @@
 <form method="post" action="/tweets/<%= @tweet.id %>">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <input id= "content" type="text" name="content" value="<%= @tweet.content %>">
-  <input type="submit" value="submit">
+  <input class="button" type="submit" value="submit">
 </form>
