--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,8 @@
 <% @user.tweets.each do |tweet| %>
   <ul>
     <%= tweet.content %>
-  </ul> 
+  </ul>
 <% end %>
+
+<a href="/tweets">All tweets</a> 
+<a href="/logout">Log out</a>
