--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,3 +1,10 @@
 <h1>Welcome, <%= @user.username%> </h1>
 
+<% @tweets.each do |tweet| %>
+    <ul>
+      <%=tweet.user.username %> said: <%= tweet.content %>
+    </ul>
+<% end %>
+
+<a href="users/:slug">Your tweets</a> 
 <a href="/logout">Log out</a>
