--- a/app/views/home.erb
+++ b/app/views/home.erb
@@ -1,4 +1,4 @@
 <h1> Welcome to Fwitter </h1>
 <br>
-<label><a href="/signup">Signup</a></label>
- <lable><a href="/login">Login</a></label>
+<h3><label><a href="/signup">Sign Up</a></label> ||
+ <lable><a href="/login">Log In</a></label></h3>
