--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,11 +1,10 @@
-<h2> Create a New Tweet </h2>
+<center><h2> Create a New Tweet </h2>
 
-<form action="/tweets" method="POST">
+<form action='/tweets' method='post'>
 
-   <label> Tweet </label>
-   <input id="content" type="text" name="content"><br>
+ <h4>Tweet: <input type="text" name="content"></h4>
 
-  <br></br>
+ <input type="submit" value="submit">
 
-  <input class="button" type="submit" value="submit">
-</form>
+ </form>
+</center>
