--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,9 +1,9 @@
 <h1> Welcome, <%= current_user.username %></h1>
 <% @tweets.each do |tweet| %>
-<p><a href="/tweets/<%=tweet.id%>"><%= tweet.content %> </a></p>
+<h4><a href="/tweets/<%=tweet.id%>"><%= tweet.content %> </a></h4>
 <% end %>
 <br>
-<p><a href="/tweets/new">New Tweet</a></p>
-<p><a href="/users/<%=current_user.slug %>">My Tweets</a></p>
+<h3><a href="/tweets/new">New Tweet</a></h3>
+<h3><a href="/users/<%=current_user.slug %>">My Tweets</a></h3>
 <br>
 <p><a href="/logout">Log out</a></p>
