--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,7 +1,8 @@
-<h1> <%= @user.username %> Tweets: </h1>
+<h1> <%= @user.username.capitalize %> Tweets: </h1>
 <br>
-<ul>
+
 <% @user.tweets.each do |tweet| %>
-<li><%= tweet.content %> </li>
+<h4><%= tweet.content %> </h4>
 <% end %>
-</ul>
+
+<p><a href="/tweets"> Back to Tweets </a></p>
