--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -6,5 +6,5 @@
     </ul>
 <% end %>
 
-<a href="users/:slug">Your tweets</a> 
+<a href="/users/<%= @user.slug%>">Your tweets</a> 
 <a href="/logout">Log out</a>
