--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,4 @@
 <p> Here are your tweets, <%= @user.username %>
 <% @user.tweets.each do |tweet| %>
-  <div>
-    <%= tweet.content %>
-  </div>
+  <p><%= tweet.content %></p>
 <% end %>
