--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,6 @@
-<p><%= @tweet.content %>
-
-<form method="post" action="/tweets/<%=@tweet.id%>/delete">
-  <input id="hidden" type="hidden" name="_method" value="DELETE">
+<p><%= @tweet.content %></p>
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+<form  action="/tweets/<%=@tweet.id%>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
-
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet </a>
