--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -2,7 +2,5 @@
 <h2> Tweets </h2>
 
 <% @tweets.each do |tweet| %>
-  <div>
-    <%= tweet.content %>
-  </div>
+  <p><%= tweet.content %></p>
 <% end %>
