--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,7 +1,6 @@
-<h2> Edit Tweet </h2>
-
-<form method="post" action="/tweets/<%=@tweet.id%>">
-  <input id="hidden" type="hidden" name="_method" value="PATCH">
-  <input type="text" name="content" value="<%= @tweet.content %>">
-  <input type="submit" value="submit">
+<h1>Edit Tweet</h1>
+<form action="/tweets/<%=@tweet.id%>" method="post">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <input type="text" name="content" placeholder="<%= @tweet.content %>">
+  <input type="submit" id="submit" value="submit">
 </form>
