--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,7 @@
-<h2>Add a tweet</h2>
-<form action="/tweets" method="POST">
-  <p>Status: <input type="text" name="content"></p>
-  <input class="btn btn-primary" type="submit" value="submit">
+<h2>Create a new tweet</h2>
+<form action="/tweets" method="post">
+  <label for="tweet">Enter Tweet</label>
+  <input type="text" name="content" placeholder="your text here">
+  <br><br>
+  <input type="submit" name="submit" id="submit" value="Submit">
 </form>
