--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,8 @@
-<h1>Welcome, </h1>
-
+<h1>Welcome, <%= @user.username %> </h1>
+<% @user.tweets.each do |tweet| %>
+    <div>
+        <%= tweet.content %>
+    </div>
+<% end %>
 
 <a href="/logout">Log Out</a>
