--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,6 +1,6 @@
 <h3>Log in to Fwitter</h3>
 <% if flash.has?(:message) %>
-  <p style="color:red;"> <%= flash[:message] %> </div>
+  <p> <%= flash[:message] %> </div>
 <% end %>
 <br>
 <div class="container h-100">
@@ -11,7 +11,7 @@
       </div>
 
       <div class="form-group">
-        <input type="password" class="form-control" name="password" id="password" placeholder="password">
+        <input type="password" class="form-control" name="password" id="password" placeholder="Password">
       </div>
 
       <input type="submit" class="btn btn-outline-info btn-primary btn-primary:hover" value="Log In">
