--- a/app/views/tweets.erb
+++ b/app/views/tweets.erb
@@ -1,7 +1,13 @@
+
 <div align="left">
+
   <div class="container">
     <h3>Welcome, <%= @user.username%></h3>
-    <a href="/users/<%=@user.slug%>/new" class="btn btn-outline-info btn-primary btn-primary:hover btn-sm">Tweet</a>
+    <% if flash.has?(:message) %>
+    <p> <%= flash[:message]%> <a href="/logout"><u>Not <%= @user.username %>?</u></a> </p>
+    <% end %>
+
+    <a href="/tweets/new" class="btn btn-outline-info btn-primary btn-primary:hover btn-sm">Tweet</a>
     <a href="/logout" class="btn btn-outline-info btn-primary btn-primary:hover btn-sm">Log Out</a>
 
     <br><br>
@@ -11,7 +17,7 @@
     <div class="container">
       <dl>
         <% @tweets.order(id: :desc).each do |tweet| %>
-            <dt><a href="/users/<%=tweet.user.slug%>"><%="#{tweet.user.username} "%></a>&bull; <%=(tweet.created_at + Time.zone_offset('PST')).strftime("%b %d") %></dt>
+            <dt><a href="/users/<%=tweet.user.slug%>"><%="#{tweet.user.username} "%></a>&bull; <%=(tweet.created_at + Time.zone_offset('PST') + 3600).strftime("%b %d") %></dt>
             <dd><a href="/tweets/<%=tweet.id%>"><%=tweet.content %></a></dd>
             <br>
     <% end %>
