--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
-<h3>Tweet Something</h3>
+<h3>Add a tweet</h3>
 
 <form action="/tweets" method="POST">
-<input type="textarea" name="content" maxlength=144>
-<input type="submit" value="Tweet Tweet">
+<input type="text" name="content">
+<input type="submit" value="submit">
 </form>
