--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,8 +1,9 @@
 <p><%= @tweet.content%></p>
+<br/>
 
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a><br/>
+<br/>
 <form action="/tweets/<%=@tweet.id%>/delete" method="POST">
     <input id="hidden" type="hidden" name="_method" value="delete">
     <input type="submit" value="Delete Tweet">
 </form>
-
-<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
