--- a/app/views/tweets.erb
+++ b/app/views/tweets.erb
@@ -17,7 +17,7 @@
     <div class="container">
       <dl>
         <% @tweets.order(id: :desc).each do |tweet| %>
-            <dt><a href="/users/<%=tweet.user.slug%>"><%="#{tweet.user.username} "%></a>&bull; <%=(tweet.created_at + Time.zone_offset('PST') + 3600).strftime("%b %d") %></dt>
+            <dt><a href="/users/<%=tweet.user.slug%>"><%="#{tweet.user.username} "%></a>&bull; </dt>
             <dd><a href="/tweets/<%=tweet.id%>"><%=tweet.content %></a></dd>
             <br>
     <% end %>
