--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,6 +6,6 @@
 
 <form action="/login" method="post">
   <p>Username: <input type="text" name="username" id="username"></p>
-  <p>Password: <input type="text" name="password" id="password"></p>
+  <p>Password: <input type="password" name="password" id="password"></p>
   <input type="submit" value="submit">
 </form>
