--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -6,4 +6,7 @@
   <textarea name="content" rows="8" cols="80" id="content"><%= @tweet.content %></textarea>
   <p><input type="submit" value="submit"></p>
 </form>
-<a href="/tweets/<%= @tweet.id %>/delete"><button type="button" >Delete Tweet</button></a>
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
