--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<center><h1><font color="pink"> Fwitter </font></h1>
+<center><h1><font color="pink"> Welcome to Fwitter </font></h1>
 <br>
 <br>
 <br>
