--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,5 @@
-<center><h2><font color="pink"> Please enter login info to access account! </h2> </font>
+<center><h1><font color="pink"> Fwitter </font></h1>
+<center><h3><font color="pink"> Login Below: </h3> </font>
 <form action="/login" method="post">
   Username: <input type="text" name="username" id="username"><br>
   <br>
