--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,5 +5,5 @@
   <br>
   Password: <input type="text" name="password" id="password"><br>
   <br>
-  <input type="submit" name="Login" value="Login">
+  <input type="submit" name="submit" value="submit">
 </form>
