--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to Fwitter!</h1>
+<h1>Welcome to Fwitter</h1>
 
 <p><a href="/login">Click here</a> to login</p>
 <p><a href="/signup">Click here</a> to signup</p>
