--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,10 +1,7 @@
-<center><font color="pink"> Create a new Fweet </font><br>
-  <br>
-  <br>
-  <form action="/tweets" method="POST">
-    Fweet: <input type="text" name="content" value="content">
+<center><font color="pink"><h1>Create a new Fweet</h3></font>
+  <form action="/tweets" method="post">
     <br>
     <br>
+    Here: <input type="text" name="content" id="content">
     <input type="submit" name="submit" value="submit">
-
   </form>
