--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,1 +1,8 @@
-edit here
+<center><font color="pink"><h1> edit here </h1></font>
+  <%= @tweet.content %>
+  <form action="/tweets/<%= @tweet.id %>" method="post">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <input type="text" name="content"><br>
+  <br>
+  <input type="submit" name="submit" value="Edit Tweet">
+</form>
