--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,8 +1,16 @@
-<center><font color="pink"><h1> edit here </h1></font>
-  <%= @tweet.content %>
+<center><font color="pink"><h1> Edit here </h1></font>
+  <b>Tweet:</b> "<%= @tweet.content %>"
+  <br>
+  <br>
   <form action="/tweets/<%= @tweet.id %>" method="post">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <input type="text" name="content"><br>
   <br>
-  <input type="submit" name="submit" value="Edit Tweet">
+  <input type="submit" id="submit" value="Edit Tweet">
+
+<a href="/tweets/:id/edit" value="submit">Logout</a>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="delete">
 </form>
