--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,7 @@
 <h2>Log in Below:</h2>
 
-<!-- <form action="/login" method="POST">
-  <! <label>Email:</label>
-  <input type="text" name="email">
-  <label>Password:</label>
-  <input type="text" name="password"> -->
-  <!-- <input type="submit" value="Log In">
-</form> -->
+<form action="/login" method="POST">
+  <p>Username: <input type="text" name="username"></p>
+  <p>Password: <input type="password" name="password"></p>
+  <p><input type="submit" value="Log In"></p>
+</form>
