--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,1 +1,5 @@
-show user
+<h1>Tweets from <%= @user.username %></h1>
+
+  <ul><% @user.tweets.each do |tweet| %>
+    <li><%= tweet.content %></li>
+  <% end %></ul>
