--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,5 +3,5 @@
 <form action="/login" method="POST">
   <p>Username: <input type="text" name="username"></p>
   <p>Password: <input type="password" name="password"></p>
-  <p><input type="submit" value="Log In"></p>
+  <p><input type="submit" id="submit" value="Log In"></p>
 </form>
