--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,28 +1,26 @@
-<div class="ui container">
+<div class="container">
 <h1>Sign Up!</h1>
+  <div class="container center">
   <form action="/signup" method="post">
-    <div class="ui small labeled input">
-      <div class="ui label">Username</div>
-      <input type="text" id="username" name="username">
-    </div>
 
-    <br></br>
+      <div>
+        <div><label for="username">Username</label></div>
+        <input type="text" id="username" name="username">
+      </div>
 
-    <div class="ui small labeled input">
-      <div class="ui label">Email</div>
-      <input type="text" id="email" name="email">
-    </div>
+      <div>
+        <div><label for="email">Email</label></div>
+        <input type="text" id="email" name="email">
+      </div>
 
-    <br></br>
+      <div>
+        <div><label for="password">Password</label></div>
+        <input type="text" id="password" name="password">
+      </div>
 
-    <div class="ui small labeled input">
-      <div class="ui label">Password</div>
-      <input type="text" id="password" name="password">
-    </div>
-
-    <br></br>
-
-    <input class="ui blue button" type="submit" value="Sign Up">
+    <input type="submit" value="Sign Up">
   </form>
+  </div>
+
 </div>
 
