--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,3 @@
-<div class="ui container">
+<div class="container">
   <h1>Welcome to Fwitter</h1>
-
-  <div>
-    <a href="/login">Login</a>
-  </div>
-  <div>
-    <a href="/signup">Sign Up</a>
-  </div>
-  
 </div>
