--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,16 @@
-<form action="/tweets" method="post">
-  <label for="content">Content:</label>
-  <input type=text id="content" name="content">
-  <input type="submit" value="submit">
-</form>
+<div class="container">
+  <h1>New Tweet</h1>
+
+  <form action="/tweets" method="post">
+    <div class="center">
+      <textarea id="content" name="content" rows="10" columns="100"></textarea>
+
+    <div>
+      <input type="submit" value="submit">
+    </div>
+    </div>
+
+ 
+
+  </form>
+</div>
