--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,13 +1,24 @@
-<form action="/login" method="post">
-  <div>
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username">
-  </div>
+<div class="container">
+  <h1>Login!</h1>
 
-  <div>
-    <label for="password">Password:</label>
-    <input type="text" id="password" name="password">
-  </div>
 
-  <input type="submit" value="submit">
-</form>
+  <div class="container center">
+
+    <form action="/login" method="post">
+      <div>
+        <div><label for="username">Username</label></div>
+        <input type="text" id="username" name="username">
+      </div>
+
+      <div>
+        <div><label for="password">Password</label></div>
+        <input type="text" id="password" name="password">
+      </div>
+
+      <div>
+        <input type="submit" value="submit">
+      </div>
+    </form>
+  
+  </div>
+</div>
