--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,6 +1,7 @@
-<h1>Welcome, <%=@user.username%></h1>
+<h1>Welcome, <%=@user.username%>!</h1>
+<h2>The Tweet Deck:</h2>
 <%Tweet.all.each do |tweet|%>
-  <p><b>@<%=tweet.user.username%>:</b><%=tweet.content%></p>
+  <p><b>@<%=tweet.user.username%>: </b><%=tweet.content%></p>
 <%end%>
 <br>
 <a href="/tweets/new">Write a Tweet</a><br>
