--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -9,3 +9,5 @@
   <input type="submit" name="submit" value="submit">
 
 </form>
+
+<h3>Don't have an account? <a href="/signup">Sign Up</a> instead.<h3>
