--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,6 +1,7 @@
 <h1>Edit your tweet</h1>
 
-<form action="/tweets/<%=@tweet.id%>" method="POST">
+<form action="/tweets/<%=@tweet.id%>" method="post">
+  <input id="hidden" type="hidden" name="_method" value="patch"> 
   Content: <input type="text" name="content" id="content" value="<%=@tweet.content%>"></input>
 
   <input type="submit" value="submit">
