--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,3 @@
-<h1>Welcome to Fwitter</h1></br></br>
+<h1>Welcome to Fwitter</h1></br>
 
-Please
-<p><a href="/login">Login</a></p>
-OR
-<p><a href="/signup">Signup</a></p>
-to continue
+<p>Please <a href="/login">Login</a> OR <a href="/signup">Signup</a> to continue </p>
