--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,9 +1,7 @@
 <h1>Login to your Account!</h1>
 <form action="/login" method="POST">
 
-  Username: <input type="text" name="username" id="username"></input>
-  <br>
-  Password: <input type="text" name="password" id="password"></input>
-  <br>
+  Username: <input type="text" name="username" id="username"></input></br></br>
+  Password: <input type="text" name="password" id="password"></input></br></br>
   <input type="submit" value="submit">
 </form>
