--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,6 +1,9 @@
 <h1>Welcome, <%=@user.username%></h1>
-<br>
+</br>
+
 <%Tweet.all.each do |tweet|%>
 <p><%=tweet.content%></p>
 <%end%>
+</br></br>
+<p>Click <a href="/tweets/new">here</a> to add a new tweet </br></br>
 <p><a href="/logout">Logout</a></p>
