--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,5 +3,6 @@
 
   Username: <input type="text" name="username" id="username"></input></br></br>
   Password: <input type="text" name="password" id="password"></input></br></br>
-  <input type="submit" value="submit">
+  <input type="submit" value="submit"></br></br>
+  Follow this <a href="/create_user">link</a> to get signed up!
 </form>
