--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -6,7 +6,7 @@
     <body>
       <h1>Welcome,<%=@user.username%><h1>
       <br>
-      <% @user.tweets.all.each do |tweet| %>
+      <% Tweets.all.each do |tweet| %>
         <p><%= tweet.content %></p>
       <% end %>
     </body>
