--- a/app/views/tweets/show_tweets.erb
+++ b/app/views/tweets/show_tweets.erb
@@ -1,3 +1,4 @@
-<h2><%= @tweets.each do |tweet| %></h2>
-  <%=tweet.content%>
-<%=end%>
+<h1>Welcome, <%=@user.username%>!</h1>
+
+
+<p><a href="/logout">Log Out</a></p>
