--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,13 +1,5 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <title>Fwitter - Tweets</title>
-  <head>
-    <body>
-      <h1>Welcome,<%=@user.username%><h1>
-      <br>
-      <% Tweets.all.each do |tweet| %>
-        <p><%= tweet.content %></p>
-      <% end %>
-    </body>
-</html>
+    <h1>Welcome,<h1>
+    <br>
+    <% Tweet.all.each do |tweet| %>
+      <p><%= tweet.content %></p>
+    <% end %>
