--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -3,3 +3,4 @@
     <% Tweet.all.each do |tweet| %>
       <p><%= tweet.content %></p>
     <% end %>
+    <h2><a href="/tweets/new">Make a new Tweet</a></h2>
