--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -10,5 +10,5 @@
       <input type='text' name='password'>
       <br><br>
 
-      <input type='submit' value="Login">
+      <input type='submit' value="submit">
     </form>
