--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,7 +1,5 @@
-    <h1>new tweet<h1>
-    <br>
-    <form method="post" action="/tweets">
-      <input type="text" id="username" name="username" value="<%=@user.username%>">
-      <input type="text" id="password" name="password" value="<%=@user.password%>">
-      <input type="submit" value="submit">submit</input>
-    </form>
+<h1>Add a New Tweet</h1>
+<form method="post" action="/tweets">
+  <input type="text" id="content" name="content">
+  <input type="submit" value="submit">
+</form>
