--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 <br>
-<form action="/users/login" method="post">
+<form action="/login" method="post">
   <h4><label>Username: <input type="text" name="user[username]" id="username"></label></h4>
   <h4><label>Password: <input type="password" name="user[password]" id="password"></label></h4>
   <br>
