--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up Page</h1>
 <br>
-<form action="/users" method="post">
+<form action="/signup" method="post">
   <h4><label>Username: <input type="text" name="user[username]" id="username"></label></h4>
 
   <h4><label>Email: <input type="text" name="user[email]" id="email"></label></h4>
