--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,9 +6,8 @@
 <form action="/tweets/<%=@tweet.id%>/delete" method="post">
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" name="delete" id ="delete" value = "Delete Tweet">
-</form>r
+</form>
 
-<form action="/tweets/<%=@tweet.id%>/edit" method="post">
-  <input id="hidden" type="hidden" name="_method" value="patc">
-  <input type="submit" name="delete" id ="delete" value = "Edit Tweet">
-</form>r
+<form action="/tweets/<%=@tweet.id%>/edit" >
+  <input type="submit" value = "Edit Tweet">
+</form>
