--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,4 @@
-<h1>Welcome, <%=@current_user%></h1>
+<h1>Welcome, <%=current_user.username%></h1>
 <ul>
 <%Tweet.all.each do |tweet| %>
     <li><%=tweet.content%></li>
