--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,7 @@
 <h1>Welcome, <%=current_user.username%></h1>
 <ul>
 <%Tweet.all.each do |tweet| %>
-    <li><%=tweet.content%></li>
+    <li><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a></li>
 <% end %>
 </ul>
 
