--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -3,4 +3,5 @@
   <input type="text" name="username" placeholder="Username:">
   <input type="password" name="password" placeholder="Password:">
   <input type="submit" value="submit">
+  <% #Test requires button value of 'submit'  %>
 </form>
